fix icon alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -279,9 +279,9 @@ $tv: 2550px;
         }
       }
     }
-    .point-1 {
-      margin-top: 0;
-    }
+    // .point-1 {
+    //   margin-top: 0;
+    // }
     .point-header {
       font-weight: 500;
 
